tests/NormalTests/paczka1/fuzzy1/93274950.err
Error in line 1: S300 S820 63,2
Error in line 16: i7M1zF7S S820 93,0
Error in line 17: i7M1zF7S S61 74,0
Error in line 18: i7M1zF7S S428 48,5
Error in line 3: hCn6z0HI S820 82,5
Error in line 8: S300 S428 89,2
Error in line 35: i7M1zF7S S820 91,4
